--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "normalize.css": "6.0.0",
     "npm": "^9.6.4",
     "pace-js": "1.0.2",
+    "primeng": "^14.2.3",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
